@@ -1,11 +1,12 @@
 /*
  * Javassist, a Java-bytecode translator toolkit.
- * Copyright (C) 1999-2007 Shigeru Chiba. All Rights Reserved.
+ * Copyright (C) 1999- Shigeru Chiba. All Rights Reserved.
  *
  * The contents of this file are subject to the Mozilla Public License Version
  * 1.1 (the "License"); you may not use this file except in compliance with
  * the License.  Alternatively, the contents of this file may be used under
- * the terms of the GNU Lesser General Public License Version 2.1 or later.
+ * the terms of the GNU Lesser General Public License Version 2.1 or later,
+ * or the Apache License Version 2.0.
  *
  * Software distributed under the License is distributed on an "AS IS" basis,
  * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
@@ -15,11 +16,11 @@
 
 package javassist.bytecode;
 
+import java.io.ByteArrayOutputStream;
 import java.io.DataInputStream;
 import java.io.DataOutputStream;
-import java.io.ByteArrayOutputStream;
-import java.io.PrintWriter;
 import java.io.IOException;
+import java.io.PrintWriter;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
@@ -30,30 +31,12 @@ import javassist.CtClass;
 /**
  * Constant pool table.
  */
-public final class ConstPool {
+public final class ConstPool
+{
     LongVector items;
     int numOfItems;
-    HashMap classes;
-    HashMap strings;
-    ConstInfo[] constInfoCache;
-    int[] constInfoIndexCache;
     int thisClassInfo;
-
-    private static final int CACHE_SIZE = 32;
-
-    /**
-     * A hash function for CACHE_SIZE
-     */
-    private static int hashFunc(int a, int b) {
-        int h = -2128831035;
-        final int prime = 16777619;
-        h = (h ^ (a & 0xff)) * prime;
-        h = (h ^ (b & 0xff)) * prime;
-
-        // changing the hash key size from 32bit to 5bit
-        h = (h >> 5) ^ (h & 0x1f);
-        return h & 0x1f;    // 0..31
-    }
+    Map<ConstInfo,ConstInfo> itemsCache;
 
     /**
      * <code>CONSTANT_Class</code>
@@ -112,9 +95,79 @@ public final class ConstPool {
     public static final int CONST_Utf8 = Utf8Info.tag;
 
     /**
+     * <code>CONSTANT_MethodHandle</code>
+     */
+    public static final int CONST_MethodHandle = MethodHandleInfo.tag;
+
+    /**
+     * <code>CONSTANT_MethodHandle</code>
+     */
+    public static final int CONST_MethodType = MethodTypeInfo.tag;
+
+    /**
+     * <code>CONSTANT_MethodHandle</code>
+     */
+    public static final int CONST_InvokeDynamic = InvokeDynamicInfo.tag;
+
+    /**
+     * <code>CONSTANT_Module</code>
+     */
+    public static final int CONST_Module = ModuleInfo.tag;
+
+    /**
+     * <code>CONSTANT_Package</code>
+     */
+    public static final int CONST_Package = PackageInfo.tag;
+
+    /**
      * Represents the class using this constant pool table.
      */
     public static final CtClass THIS = null;
+
+    /**
+     * <code>reference_kind</code> of <code>CONSTANT_MethodHandle_info</code>.
+     */
+    public static final int REF_getField = 1;
+
+    /**
+     * <code>reference_kind</code> of <code>CONSTANT_MethodHandle_info</code>.
+     */
+    public static final int REF_getStatic = 2;
+
+    /**
+     * <code>reference_kind</code> of <code>CONSTANT_MethodHandle_info</code>.
+     */
+    public static final int REF_putField = 3;
+
+    /**
+     * <code>reference_kind</code> of <code>CONSTANT_MethodHandle_info</code>.
+     */
+    public static final int REF_putStatic = 4;
+
+    /**
+     * <code>reference_kind</code> of <code>CONSTANT_MethodHandle_info</code>.
+     */
+    public static final int REF_invokeVirtual = 5;
+
+    /**
+     * <code>reference_kind</code> of <code>CONSTANT_MethodHandle_info</code>.
+     */
+    public static final int REF_invokeStatic = 6;
+
+    /**
+     * <code>reference_kind</code> of <code>CONSTANT_MethodHandle_info</code>.
+     */
+    public static final int REF_invokeSpecial = 7;
+
+    /**
+     * <code>reference_kind</code> of <code>CONSTANT_MethodHandle_info</code>.
+     */
+    public static final int REF_newInvokeSpecial = 8;
+
+    /**
+     * <code>reference_kind</code> of <code>CONSTANT_MethodHandle_info</code>.
+     */
+    public static final int REF_invokeInterface = 9;
 
     /**
      * Constructs a constant pool table.
@@ -122,14 +175,12 @@ public final class ConstPool {
      * @param thisclass         the name of the class using this constant
      *                          pool table
      */
-    public ConstPool(String thisclass) {
+    public ConstPool(String thisclass)
+    {
         items = new LongVector();
+        itemsCache = null;
         numOfItems = 0;
-        addItem(null);          // index 0 is reserved by the JVM.
-        classes = new HashMap();
-        strings = new HashMap();
-        constInfoCache = new ConstInfo[CACHE_SIZE];
-        constInfoIndexCache = new int[CACHE_SIZE];
+        addItem0(null);          // index 0 is reserved by the JVM.
         thisClassInfo = addClassInfo(thisclass);
     }
 
@@ -138,35 +189,33 @@ public final class ConstPool {
      *
      * @param in        byte stream.
      */
-    public ConstPool(DataInputStream in) throws IOException {
-        classes = new HashMap();
-        strings = new HashMap();
-        constInfoCache = new ConstInfo[CACHE_SIZE];
-        constInfoIndexCache = new int[CACHE_SIZE];
+    public ConstPool(DataInputStream in) throws IOException
+    {
+        itemsCache = null;
         thisClassInfo = 0;
         /* read() initializes items and numOfItems, and do addItem(null).
          */
         read(in);
     }
 
-    void prune() {
-        classes = new HashMap();
-        strings = new HashMap();
-        constInfoCache = new ConstInfo[CACHE_SIZE];
-        constInfoIndexCache = new int[CACHE_SIZE];
+    void prune()
+    {
+        itemsCache = null;
     }
 
     /**
      * Returns the number of entries in this table.
      */
-    public int getSize() {
+    public int getSize()
+    {
         return numOfItems;
     }
 
     /**
      * Returns the name of the class using this constant pool table.
      */
-    public String getClassName() {
+    public String getClassName()
+    {
         return getClassInfo(thisClassInfo);
     }
 
@@ -174,23 +223,30 @@ public final class ConstPool {
      * Returns the index of <code>CONSTANT_Class_info</code> structure
      * specifying the class using this constant pool table.
      */
-    public int getThisClassInfo() {
+    public int getThisClassInfo()
+    {
         return thisClassInfo;
     }
 
-    void setThisClassInfo(int i) {
+    void setThisClassInfo(int i)
+    {
         thisClassInfo = i;
     }
 
-    ConstInfo getItem(int n) {
+    ConstInfo getItem(int n)
+    {
         return items.elementAt(n);
     }
 
     /**
      * Returns the <code>tag</code> field of the constant pool table
      * entry at the given index.
+     *
+     * @return either <code>CONST_Class</code>, <code>CONST_Fieldref</code>,
+     *         <code>CONST_Methodref</code>, or ...  
      */
-    public int getTag(int index) {
+    public int getTag(int index)
+    {
         return getItem(index).getTag();
     }
 
@@ -201,16 +257,36 @@ public final class ConstPool {
      * @return  a fully-qualified class or interface name specified
      *          by <code>name_index</code>.  If the type is an array
      *          type, this method returns an encoded name like
-     *          <code>[java.lang.Object;</code> (note that the separators
+     *          <code>[Ljava.lang.Object;</code> (note that the separators
      *          are not slashes but dots).
      * @see javassist.ClassPool#getCtClass(String)
      */
-    public String getClassInfo(int index) {
+    public String getClassInfo(int index)
+    {
         ClassInfo c = (ClassInfo)getItem(index);
         if (c == null)
             return null;
-        else
-            return Descriptor.toJavaName(getUtf8Info(c.name));
+        return Descriptor.toJavaName(getUtf8Info(c.name));
+    }
+
+    /**
+     * Reads <code>CONSTANT_Class_info</code> structure
+     * at the given index.
+     *
+     * @return  the descriptor of the type specified
+     *          by <code>name_index</code>.
+     * @see javassist.ClassPool#getCtClass(String)
+     * @since 3.15
+     */
+    public String getClassInfoByDescriptor(int index)
+    {
+        ClassInfo c = (ClassInfo)getItem(index);
+        if (c == null)
+            return null;
+        String className = getUtf8Info(c.name);
+        if (className.charAt(0) == '[')
+            return className;
+        return Descriptor.of(className);
     }
 
     /**
@@ -218,7 +294,8 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * at the given index.
      */
-    public int getNameAndTypeName(int index) {
+    public int getNameAndTypeName(int index)
+    {
         NameAndTypeInfo ntinfo = (NameAndTypeInfo)getItem(index);
         return ntinfo.memberName;
     }
@@ -228,7 +305,8 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * at the given index.
      */
-    public int getNameAndTypeDescriptor(int index) {
+    public int getNameAndTypeDescriptor(int index)
+    {
         NameAndTypeInfo ntinfo = (NameAndTypeInfo)getItem(index);
         return ntinfo.typeDescriptor;
     }
@@ -242,7 +320,8 @@ public final class ConstPool {
      *
      * @since 3.6
      */
-    public int getMemberClass(int index) {
+    public int getMemberClass(int index)
+    {
         MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.classIndex;
     }
@@ -256,7 +335,8 @@ public final class ConstPool {
      *
      * @since 3.6
      */
-    public int getMemberNameAndType(int index) {
+    public int getMemberNameAndType(int index)
+    {
         MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.nameAndTypeIndex;
     }
@@ -266,7 +346,8 @@ public final class ConstPool {
      * <code>CONSTANT_Fieldref_info</code> structure
      * at the given index.
      */
-    public int getFieldrefClass(int index) {
+    public int getFieldrefClass(int index)
+    {
         FieldrefInfo finfo = (FieldrefInfo)getItem(index);
         return finfo.classIndex;
     }
@@ -278,12 +359,12 @@ public final class ConstPool {
      *
      * @return the name of the class at that <code>class_index</code>.
      */
-    public String getFieldrefClassName(int index) {
+    public String getFieldrefClassName(int index)
+    {
         FieldrefInfo f = (FieldrefInfo)getItem(index);
         if (f == null)
             return null;
-        else
-            return getClassInfo(f.classIndex);
+        return getClassInfo(f.classIndex);
     }
 
     /**
@@ -291,7 +372,8 @@ public final class ConstPool {
      * <code>CONSTANT_Fieldref_info</code> structure
      * at the given index.
      */
-    public int getFieldrefNameAndType(int index) {
+    public int getFieldrefNameAndType(int index)
+    {
         FieldrefInfo finfo = (FieldrefInfo)getItem(index);
         return finfo.nameAndTypeIndex;
     }
@@ -304,17 +386,15 @@ public final class ConstPool {
      * @param index     an index to a <code>CONSTANT_Fieldref_info</code>.
      * @return  the name of the field.
      */
-    public String getFieldrefName(int index) {
+    public String getFieldrefName(int index)
+    {
         FieldrefInfo f = (FieldrefInfo)getItem(index);
         if (f == null)
             return null;
-        else {
-            NameAndTypeInfo n = (NameAndTypeInfo)getItem(f.nameAndTypeIndex);
-            if(n == null)
-                return null;
-            else
-                return getUtf8Info(n.memberName);
-        }
+        NameAndTypeInfo n = (NameAndTypeInfo)getItem(f.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.memberName);
     }
 
     /**
@@ -325,17 +405,15 @@ public final class ConstPool {
      * @param index     an index to a <code>CONSTANT_Fieldref_info</code>.
      * @return  the type descriptor of the field.
      */
-    public String getFieldrefType(int index) {
+    public String getFieldrefType(int index)
+    {
         FieldrefInfo f = (FieldrefInfo)getItem(index);
         if (f == null)
             return null;
-        else {
-            NameAndTypeInfo n = (NameAndTypeInfo)getItem(f.nameAndTypeIndex);
-            if(n == null)
-                return null;
-            else
-                return getUtf8Info(n.typeDescriptor);
-        }
+        NameAndTypeInfo n = (NameAndTypeInfo)getItem(f.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.typeDescriptor);
     }
 
     /**
@@ -343,8 +421,9 @@ public final class ConstPool {
      * <code>CONSTANT_Methodref_info</code> structure
      * at the given index.
      */
-    public int getMethodrefClass(int index) {
-        MethodrefInfo minfo = (MethodrefInfo)getItem(index);
+    public int getMethodrefClass(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.classIndex;
     }
 
@@ -355,12 +434,12 @@ public final class ConstPool {
      *
      * @return the name of the class at that <code>class_index</code>.
      */
-    public String getMethodrefClassName(int index) {
-        MethodrefInfo minfo = (MethodrefInfo)getItem(index);
+    public String getMethodrefClassName(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (minfo == null)
             return null;
-        else
-            return getClassInfo(minfo.classIndex);
+        return getClassInfo(minfo.classIndex);
     }
 
     /**
@@ -368,8 +447,9 @@ public final class ConstPool {
      * <code>CONSTANT_Methodref_info</code> structure
      * at the given index.
      */
-    public int getMethodrefNameAndType(int index) {
-        MethodrefInfo minfo = (MethodrefInfo)getItem(index);
+    public int getMethodrefNameAndType(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.nameAndTypeIndex;
     }
 
@@ -381,18 +461,16 @@ public final class ConstPool {
      * @param index     an index to a <code>CONSTANT_Methodref_info</code>.
      * @return  the name of the method.
      */
-    public String getMethodrefName(int index) {
-        MethodrefInfo minfo = (MethodrefInfo)getItem(index);
+    public String getMethodrefName(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (minfo == null)
             return null;
-        else {
-            NameAndTypeInfo n
-                = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
-            if(n == null)
-                return null;
-            else
-                return getUtf8Info(n.memberName);
-        }
+        NameAndTypeInfo n
+            = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.memberName);
     }
 
     /**
@@ -403,18 +481,16 @@ public final class ConstPool {
      * @param index     an index to a <code>CONSTANT_Methodref_info</code>.
      * @return  the descriptor of the method.
      */
-    public String getMethodrefType(int index) {
-        MethodrefInfo minfo = (MethodrefInfo)getItem(index);
+    public String getMethodrefType(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (minfo == null)
             return null;
-        else {
-            NameAndTypeInfo n
-                = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
-            if(n == null)
-                return null;
-            else
-                return getUtf8Info(n.typeDescriptor);
-        }
+        NameAndTypeInfo n
+            = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.typeDescriptor);
     }
 
     /**
@@ -422,9 +498,9 @@ public final class ConstPool {
      * <code>CONSTANT_InterfaceMethodref_info</code> structure
      * at the given index.
      */
-    public int getInterfaceMethodrefClass(int index) {
-        InterfaceMethodrefInfo minfo
-            = (InterfaceMethodrefInfo)getItem(index);
+    public int getInterfaceMethodrefClass(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.classIndex;
     }
 
@@ -435,9 +511,9 @@ public final class ConstPool {
      *
      * @return the name of the class at that <code>class_index</code>.
      */
-    public String getInterfaceMethodrefClassName(int index) {
-        InterfaceMethodrefInfo minfo
-            = (InterfaceMethodrefInfo)getItem(index);
+    public String getInterfaceMethodrefClassName(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return getClassInfo(minfo.classIndex);
     }
 
@@ -446,9 +522,9 @@ public final class ConstPool {
      * <code>CONSTANT_InterfaceMethodref_info</code> structure
      * at the given index.
      */
-    public int getInterfaceMethodrefNameAndType(int index) {
-        InterfaceMethodrefInfo minfo
-            = (InterfaceMethodrefInfo)getItem(index);
+    public int getInterfaceMethodrefNameAndType(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.nameAndTypeIndex;
     }
 
@@ -461,19 +537,16 @@ public final class ConstPool {
      *                  a <code>CONSTANT_InterfaceMethodref_info</code>.
      * @return  the name of the method.
      */
-    public String getInterfaceMethodrefName(int index) {
-        InterfaceMethodrefInfo minfo
-            = (InterfaceMethodrefInfo)getItem(index);
+    public String getInterfaceMethodrefName(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (minfo == null)
             return null;
-        else {
-            NameAndTypeInfo n
-                = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
-            if(n == null)
-                return null;
-            else
-                return getUtf8Info(n.memberName);
-        }
+        NameAndTypeInfo n
+            = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.memberName);
     }
 
     /**
@@ -485,19 +558,16 @@ public final class ConstPool {
      *                  a <code>CONSTANT_InterfaceMethodref_info</code>.
      * @return  the descriptor of the method.
      */
-    public String getInterfaceMethodrefType(int index) {
-        InterfaceMethodrefInfo minfo
-            = (InterfaceMethodrefInfo)getItem(index);
+    public String getInterfaceMethodrefType(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (minfo == null)
             return null;
-        else {
-            NameAndTypeInfo n
-                = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
-            if(n == null)
-                return null;
-            else
-                return getUtf8Info(n.typeDescriptor);
-        }
+        NameAndTypeInfo n
+            = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.typeDescriptor);
     }
     /**
      * Reads <code>CONSTANT_Integer_info</code>, <code>_Float_info</code>,
@@ -508,21 +578,20 @@ public final class ConstPool {
      * @return a <code>String</code> value or a wrapped primitive-type
      * value.
      */
-    public Object getLdcValue(int index) {
+    public Object getLdcValue(int index)
+    {
         ConstInfo constInfo = this.getItem(index);
         Object value = null;
         if (constInfo instanceof StringInfo)
             value = this.getStringInfo(index);
         else if (constInfo instanceof FloatInfo)
-            value = new Float(getFloatInfo(index));
+            value = Float.valueOf(getFloatInfo(index));
         else if (constInfo instanceof IntegerInfo)
-            value = new Integer(getIntegerInfo(index));
+            value = Integer.valueOf(getIntegerInfo(index));
         else if (constInfo instanceof LongInfo)
-            value = new Long(getLongInfo(index));
+            value = Long.valueOf(getLongInfo(index));
         else if (constInfo instanceof DoubleInfo)
-            value = new Double(getDoubleInfo(index));
-        else
-            value = null;
+            value = Double.valueOf(getDoubleInfo(index));
 
         return value;
     }
@@ -533,7 +602,8 @@ public final class ConstPool {
      *
      * @return the value specified by this entry.
      */
-    public int getIntegerInfo(int index) {
+    public int getIntegerInfo(int index)
+    {
         IntegerInfo i = (IntegerInfo)getItem(index);
         return i.value;
     }
@@ -544,7 +614,8 @@ public final class ConstPool {
      *
      * @return the value specified by this entry.
      */
-    public float getFloatInfo(int index) {
+    public float getFloatInfo(int index)
+    {
         FloatInfo i = (FloatInfo)getItem(index);
         return i.value;
     }
@@ -555,7 +626,8 @@ public final class ConstPool {
      *
      * @return the value specified by this entry.
      */
-    public long getLongInfo(int index) {
+    public long getLongInfo(int index)
+    {
         LongInfo i = (LongInfo)getItem(index);
         return i.value;
     }
@@ -566,7 +638,8 @@ public final class ConstPool {
      *
      * @return the value specified by this entry.
      */
-    public double getDoubleInfo(int index) {
+    public double getDoubleInfo(int index)
+    {
         DoubleInfo i = (DoubleInfo)getItem(index);
         return i.value;
     }
@@ -577,7 +650,8 @@ public final class ConstPool {
      *
      * @return the string specified by <code>string_index</code>.
      */
-    public String getStringInfo(int index) {
+    public String getStringInfo(int index)
+    {
         StringInfo si = (StringInfo)getItem(index);
         return getUtf8Info(si.string);
     }
@@ -588,9 +662,131 @@ public final class ConstPool {
      *
      * @return the string specified by this entry.
      */
-    public String getUtf8Info(int index) {
+    public String getUtf8Info(int index)
+    {
         Utf8Info utf = (Utf8Info)getItem(index);
         return utf.string;
+    }
+
+    /**
+     * Reads the <code>reference_kind</code> field of the
+     * <code>CONSTANT_MethodHandle_info</code> structure
+     * at the given index.
+     *
+     * @see #REF_getField
+     * @see #REF_getStatic
+     * @see #REF_invokeInterface
+     * @see #REF_invokeSpecial
+     * @see #REF_invokeStatic
+     * @see #REF_invokeVirtual
+     * @see #REF_newInvokeSpecial
+     * @see #REF_putField
+     * @see #REF_putStatic
+     * @since 3.17
+     */
+    public int getMethodHandleKind(int index)
+    {
+        MethodHandleInfo mhinfo = (MethodHandleInfo)getItem(index);
+        return mhinfo.refKind;
+    }
+
+    /**
+     * Reads the <code>reference_index</code> field of the
+     * <code>CONSTANT_MethodHandle_info</code> structure
+     * at the given index.
+     *
+     * @since 3.17
+     */
+    public int getMethodHandleIndex(int index)
+    {
+        MethodHandleInfo mhinfo = (MethodHandleInfo)getItem(index);
+        return mhinfo.refIndex;
+    }
+
+    /**
+     * Reads the <code>descriptor_index</code> field of the
+     * <code>CONSTANT_MethodType_info</code> structure
+     * at the given index.
+     *
+     * @since 3.17
+     */
+    public int getMethodTypeInfo(int index)
+    {
+        MethodTypeInfo mtinfo = (MethodTypeInfo)getItem(index);
+        return mtinfo.descriptor;
+    }
+
+    /**
+     * Reads the <code>bootstrap_method_attr_index</code> field of the
+     * <code>CONSTANT_InvokeDynamic_info</code> structure
+     * at the given index.
+     *
+     * @since 3.17
+     */
+    public int getInvokeDynamicBootstrap(int index)
+    {
+        InvokeDynamicInfo iv = (InvokeDynamicInfo)getItem(index);
+        return iv.bootstrap;
+    }
+
+    /**
+     * Reads the <code>name_and_type_index</code> field of the
+     * <code>CONSTANT_InvokeDynamic_info</code> structure
+     * at the given index.
+     *
+     * @since 3.17
+     */
+    public int getInvokeDynamicNameAndType(int index)
+    {
+        InvokeDynamicInfo iv = (InvokeDynamicInfo)getItem(index);
+        return iv.nameAndType;
+    }
+
+    /**
+     * Reads the <code>descriptor_index</code> field of the
+     * <code>CONSTANT_NameAndType_info</code> structure
+     * indirectly specified by the given index.
+     *
+     * @param index     an index to a <code>CONSTANT_InvokeDynamic_info</code>.
+     * @return  the descriptor of the method.
+     * @since 3.17
+     */
+    public String getInvokeDynamicType(int index)
+    {
+        InvokeDynamicInfo iv = (InvokeDynamicInfo)getItem(index);
+        if (iv == null)
+            return null;
+        NameAndTypeInfo n = (NameAndTypeInfo)getItem(iv.nameAndType);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.typeDescriptor);
+    }
+
+    /**
+     * Reads the <code>name_index</code> field of the
+     * <code>CONSTANT_Module_info</code> structure at the given index.
+     *
+     * @return the module name at <code>name_index</code>.
+     * @since 3.22
+     */
+    public String getModuleInfo(int index)
+    {
+        ModuleInfo mi = (ModuleInfo)getItem(index);
+        return getUtf8Info(mi.name);
+    }
+
+    /**
+     * Reads the <code>name_index</code> field of the
+     * <code>CONSTANT_Package_info</code> structure at the given index.
+     *
+     * @return the package name at <code>name_index</code>.  It is a slash-
+     * separated name such as com/oracle/net.
+     * @since 3.22
+     */
+    public String getPackageInfo(int index)
+    {
+        PackageInfo mi = (PackageInfo)getItem(index);
+        return getUtf8Info(mi.name);
     }
 
     /**
@@ -603,7 +799,8 @@ public final class ConstPool {
      *                  If it is not that constructor,
      *                  <code>isConstructor()</code> returns 0.
      */
-    public int isConstructor(String classname, int index) {
+    public int isConstructor(String classname, int index)
+    {
         return isMember(classname, MethodInfo.nameInit, index);
     }
 
@@ -623,7 +820,8 @@ public final class ConstPool {
      *                  If it is not that member,
      *                  <code>isMember()</code> returns 0.
      */
-    public int isMember(String classname, String membername, int index) {
+    public int isMember(String classname, String membername, int index)
+    {
         MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (getClassInfo(minfo.classIndex).equals(classname)) {
             NameAndTypeInfo ntinfo
@@ -652,19 +850,33 @@ public final class ConstPool {
      *                  Otherwise, null if that structure does not 
      *                  match the given member name and descriptor.
      */
-    public String eqMember(String membername, String desc, int index) {
+    public String eqMember(String membername, String desc, int index)
+    {
         MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         NameAndTypeInfo ntinfo
                 = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
         if (getUtf8Info(ntinfo.memberName).equals(membername)
             && getUtf8Info(ntinfo.typeDescriptor).equals(desc))
             return getClassInfo(minfo.classIndex);
-        else
-            return null;       // false
+        return null;       // false
     }
 
-    private int addItem(ConstInfo info) {
+    private int addItem0(ConstInfo info)
+    {
         items.addElement(info);
+        return numOfItems++;
+    }
+
+    private int addItem(ConstInfo info)
+    {
+        if (itemsCache == null)
+            itemsCache = makeItemsCache(items);
+
+        ConstInfo found = itemsCache.get(info);
+        if (found != null)
+            return found.index;
+        items.addElement(info);
+        itemsCache.put(info, info);
         return numOfItems++;
     }
 
@@ -679,7 +891,8 @@ public final class ConstPool {
      * @param classnames        the map or null.
      * @return the index of the copied item into the destination ClassPool.
      */
-    public int copy(int n, ConstPool dest, Map classnames) {
+    public int copy(int n, ConstPool dest, Map<String,String> classnames)
+    {
         if (n == 0)
             return 0;
 
@@ -688,7 +901,7 @@ public final class ConstPool {
     }
 
     int addConstInfoPadding() {
-        return addItem(new ConstInfoPadding());
+        return addItem0(new ConstInfoPadding(numOfItems));
     }
 
     /**
@@ -699,7 +912,8 @@ public final class ConstPool {
      *
      * @return          the index of the added entry.
      */
-    public int addClassInfo(CtClass c) {
+    public int addClassInfo(CtClass c)
+    {
         if (c == THIS)
             return thisClassInfo;
         else if (!c.isArray())
@@ -724,16 +938,10 @@ public final class ConstPool {
      *                  (or the JVM-internal representation of that name).
      * @return          the index of the added entry.
      */
-    public int addClassInfo(String qname) {
-        ClassInfo info = (ClassInfo)classes.get(qname);
-        if (info != null)
-            return info.index;
-        else {
-            int utf8 = addUtf8Info(Descriptor.toJvmName(qname));
-            info = new ClassInfo(utf8, numOfItems);
-            classes.put(qname, info);
-            return addItem(info);
-        }
+    public int addClassInfo(String qname)
+    {
+        int utf8 = addUtf8Info(Descriptor.toJvmName(qname));
+        return addItem(new ClassInfo(utf8, numOfItems));
     }
 
     /**
@@ -745,7 +953,8 @@ public final class ConstPool {
      * @param type      <code>descriptor_index</code>
      * @return          the index of the added entry.
      */
-    public int addNameAndTypeInfo(String name, String type) {
+    public int addNameAndTypeInfo(String name, String type)
+    {
         return addNameAndTypeInfo(addUtf8Info(name), addUtf8Info(type));
     }
 
@@ -756,18 +965,9 @@ public final class ConstPool {
      * @param type      <code>descriptor_index</code>
      * @return          the index of the added entry.
      */
-    public int addNameAndTypeInfo(int name, int type) {
-        int h = hashFunc(name, type);
-        ConstInfo ci = constInfoCache[h];
-        if (ci != null && ci instanceof NameAndTypeInfo && ci.hashCheck(name, type))
-            return constInfoIndexCache[h];
-        else {
-            NameAndTypeInfo item = new NameAndTypeInfo(name, type);
-            constInfoCache[h] = item;
-            int i = addItem(item);
-            constInfoIndexCache[h] = i;
-            return i;
-        }
+    public int addNameAndTypeInfo(int name, int type)
+    {
+        return addItem(new NameAndTypeInfo(name, type, numOfItems));
     }
 
     /**
@@ -783,7 +983,8 @@ public final class ConstPool {
      *                          of <code>CONSTANT_NameAndType_info</code>.
      * @return          the index of the added entry.
      */
-    public int addFieldrefInfo(int classInfo, String name, String type) {
+    public int addFieldrefInfo(int classInfo, String name, String type)
+    {
         int nt = addNameAndTypeInfo(name, type);
         return addFieldrefInfo(classInfo, nt);
     }
@@ -795,18 +996,10 @@ public final class ConstPool {
      * @param nameAndTypeInfo   <code>name_and_type_index</code>.
      * @return          the index of the added entry.
      */
-    public int addFieldrefInfo(int classInfo, int nameAndTypeInfo) {
-        int h = hashFunc(classInfo, nameAndTypeInfo);
-        ConstInfo ci = constInfoCache[h];
-        if (ci != null && ci instanceof FieldrefInfo && ci.hashCheck(classInfo, nameAndTypeInfo))
-            return constInfoIndexCache[h];
-        else {
-            FieldrefInfo item = new FieldrefInfo(classInfo, nameAndTypeInfo);
-            constInfoCache[h] = item;
-            int i = addItem(item);
-            constInfoIndexCache[h] = i;
-            return i;
-        }
+    public int addFieldrefInfo(int classInfo, int nameAndTypeInfo) 
+    {
+        return addItem(new FieldrefInfo(classInfo, nameAndTypeInfo,
+                                        numOfItems));
     }
 
     /**
@@ -822,7 +1015,8 @@ public final class ConstPool {
      *                          of <code>CONSTANT_NameAndType_info</code>.
      * @return          the index of the added entry.
      */
-    public int addMethodrefInfo(int classInfo, String name, String type) {
+    public int addMethodrefInfo(int classInfo, String name, String type)
+    {
         int nt = addNameAndTypeInfo(name, type);
         return addMethodrefInfo(classInfo, nt);
     }
@@ -834,18 +1028,10 @@ public final class ConstPool {
      * @param nameAndTypeInfo   <code>name_and_type_index</code>.
      * @return          the index of the added entry.
      */
-    public int addMethodrefInfo(int classInfo, int nameAndTypeInfo) {
-        int h = hashFunc(classInfo, nameAndTypeInfo);
-        ConstInfo ci = constInfoCache[h];
-        if (ci != null && ci instanceof MethodrefInfo && ci.hashCheck(classInfo, nameAndTypeInfo))
-            return constInfoIndexCache[h];
-        else {
-            MethodrefInfo item = new MethodrefInfo(classInfo, nameAndTypeInfo);
-            constInfoCache[h] = item;
-            int i = addItem(item);
-            constInfoIndexCache[h] = i;
-            return i;
-        }
+    public int addMethodrefInfo(int classInfo, int nameAndTypeInfo)
+    {
+         return addItem(new MethodrefInfo(classInfo,
+                 nameAndTypeInfo, numOfItems));
     }
 
     /**
@@ -862,8 +1048,10 @@ public final class ConstPool {
      *                          of <code>CONSTANT_NameAndType_info</code>.
      * @return          the index of the added entry.
      */
-    public int addInterfaceMethodrefInfo(int classInfo, String name,
-                                         String type) {
+    public int addInterfaceMethodrefInfo(int classInfo,
+                                         String name,
+                                         String type)
+    {
         int nt = addNameAndTypeInfo(name, type);
         return addInterfaceMethodrefInfo(classInfo, nt);
     }
@@ -877,18 +1065,11 @@ public final class ConstPool {
      * @return          the index of the added entry.
      */
     public int addInterfaceMethodrefInfo(int classInfo,
-                                         int nameAndTypeInfo) {
-        int h = hashFunc(classInfo, nameAndTypeInfo);
-        ConstInfo ci = constInfoCache[h];
-        if (ci != null && ci instanceof InterfaceMethodrefInfo && ci.hashCheck(classInfo, nameAndTypeInfo))
-            return constInfoIndexCache[h];
-        else {
-            InterfaceMethodrefInfo item =new InterfaceMethodrefInfo(classInfo, nameAndTypeInfo); 
-            constInfoCache[h] = item;
-            int i = addItem(item);
-            constInfoIndexCache[h] = i;
-            return i;
-        }
+                                         int nameAndTypeInfo)
+    {
+        return addItem(new InterfaceMethodrefInfo(classInfo,
+                                                  nameAndTypeInfo,
+                                                  numOfItems));
     }
 
     /**
@@ -900,8 +1081,10 @@ public final class ConstPool {
      *
      * @return          the index of the added entry.
      */
-    public int addStringInfo(String str) {
-        return addItem(new StringInfo(addUtf8Info(str)));
+    public int addStringInfo(String str)
+    {
+        int utf = addUtf8Info(str);
+        return addItem(new StringInfo(utf, numOfItems));
     }
 
     /**
@@ -910,8 +1093,9 @@ public final class ConstPool {
      *
      * @return          the index of the added entry.
      */
-    public int addIntegerInfo(int i) {
-        return addItem(new IntegerInfo(i));
+    public int addIntegerInfo(int i)
+    {
+        return addItem(new IntegerInfo(i, numOfItems));
     }
 
     /**
@@ -920,8 +1104,9 @@ public final class ConstPool {
      *
      * @return          the index of the added entry.
      */
-    public int addFloatInfo(float f) {
-        return addItem(new FloatInfo(f));
+    public int addFloatInfo(float f)
+    {
+        return addItem(new FloatInfo(f, numOfItems));
     }
 
     /**
@@ -930,9 +1115,12 @@ public final class ConstPool {
      *
      * @return          the index of the added entry.
      */
-    public int addLongInfo(long l) {
-        int i = addItem(new LongInfo(l));
-        addItem(new ConstInfoPadding());
+    public int addLongInfo(long l)
+    {
+        int i = addItem(new LongInfo(l, numOfItems));
+        if (i == numOfItems - 1)    // if not existing
+            addConstInfoPadding();
+
         return i;
     }
 
@@ -942,9 +1130,12 @@ public final class ConstPool {
      *
      * @return          the index of the added entry.
      */
-    public int addDoubleInfo(double d) {
-        int i = addItem(new DoubleInfo(d));
-        addItem(new ConstInfoPadding());
+    public int addDoubleInfo(double d)
+    {
+        int i = addItem(new DoubleInfo(d, numOfItems));
+        if (i == numOfItems - 1)    // if not existing
+            addConstInfoPadding();
+
         return i;
     }
 
@@ -952,32 +1143,88 @@ public final class ConstPool {
      * Adds a new <code>CONSTANT_Utf8_info</code>
      * structure.
      *
-     * <p>If the given utf8 string has been already recorded in the
-     * table, then this method does not add a new entry to avoid adding
-     * a duplicated entry.
-     * Instead, it returns the index of the entry already recorded.
-     *
      * @return          the index of the added entry.
      */
-    public int addUtf8Info(String utf8) {
-        Utf8Info info = (Utf8Info)strings.get(utf8);
-        if (info != null)
-            return info.index;
-        else {
-            info = new Utf8Info(utf8, numOfItems);
-            strings.put(utf8, info);
-            return addItem(info);
-        }
+    public int addUtf8Info(String utf8)
+    {
+        return addItem(new Utf8Info(utf8, numOfItems));
+    }
+
+    /**
+     * Adds a new <code>CONSTANT_MethodHandle_info</code>
+     * structure.
+     *
+     * @param kind      <code>reference_kind</code>
+     *                  such as {@link #REF_invokeStatic <code>REF_invokeStatic</code>}.
+     * @param index     <code>reference_index</code>.
+     * @return          the index of the added entry.
+     *
+     * @since 3.17
+     */
+    public int addMethodHandleInfo(int kind, int index)
+    {
+        return addItem(new MethodHandleInfo(kind, index, numOfItems));
+    }
+
+    /**
+     * Adds a new <code>CONSTANT_MethodType_info</code>
+     * structure.
+     *
+     * @param desc      <code>descriptor_index</code>.
+     * @return          the index of the added entry.
+     *
+     * @since 3.17
+     */
+    public int addMethodTypeInfo(int desc)
+    {
+        return addItem(new MethodTypeInfo(desc, numOfItems));
+    }
+
+    /**
+     * Adds a new <code>CONSTANT_InvokeDynamic_info</code>
+     * structure.
+     *
+     * @param bootstrap     <code>bootstrap_method_attr_index</code>.
+     * @param nameAndType   <code>name_and_type_index</code>.
+     * @return          the index of the added entry.
+     *
+     * @since 3.17
+     */
+    public int addInvokeDynamicInfo(int bootstrap, int nameAndType)
+    {
+        return addItem(new InvokeDynamicInfo(bootstrap, nameAndType, numOfItems));
+    }
+
+    /**
+     * Adds a new <code>CONSTANT_Module_info</code>
+     * @param nameIndex         the index of the Utf8 entry.
+     * @return          the index of the added entry.
+     * @since 3.22
+     */
+    public int addModuleInfo(int nameIndex)
+    {
+        return addItem(new ModuleInfo(nameIndex, numOfItems));
+    }
+
+    /**
+     * Adds a new <code>CONSTANT_Package_info</code>
+     * @param nameIndex         the index of the Utf8 entry.
+     * @return          the index of the added entry.
+     * @since 3.22
+     */
+    public int addPackageInfo(int nameIndex)
+    {
+        return addItem(new PackageInfo(nameIndex, numOfItems));
     }
 
     /**
      * Get all the class names.
      *
-     * @return a set of class names
+     * @return a set of class names (<code>String</code> objects).
      */
-    public Set getClassNames()
+    public Set<String> getClassNames()
     {
-        HashSet result = new HashSet();
+        Set<String> result = new HashSet<String>();
         LongVector v = items;
         int size = numOfItems;
         for (int i = 1; i < size; ++i) {
@@ -994,14 +1241,13 @@ public final class ConstPool {
      * @param oldName           the replaced name (JVM-internal representation).
      * @param newName           the substituted name (JVM-internal representation).
      */
-    public void renameClass(String oldName, String newName) {
+    public void renameClass(String oldName, String newName)
+    {
         LongVector v = items;
         int size = numOfItems;
-        classes = new HashMap(classes.size() * 2);
         for (int i = 1; i < size; ++i) {
             ConstInfo ci = v.elementAt(i);
-            ci.renameClass(this, oldName, newName);
-            ci.makeHashtable(this);
+            ci.renameClass(this, oldName, newName, itemsCache);
         }
     }
 
@@ -1011,93 +1257,114 @@ public final class ConstPool {
      * @param classnames        specifies pairs of replaced and substituted
      *                          name.
      */
-    public void renameClass(Map classnames) {
+    public void renameClass(Map<String,String> classnames)
+    {
         LongVector v = items;
         int size = numOfItems;
-        classes = new HashMap(classes.size() * 2);
         for (int i = 1; i < size; ++i) {
             ConstInfo ci = v.elementAt(i);
-            ci.renameClass(this, classnames);
-            ci.makeHashtable(this);
+            ci.renameClass(this, classnames, itemsCache);
         }
     }
 
-    private void read(DataInputStream in) throws IOException {
+    private void read(DataInputStream in) throws IOException
+    {
         int n = in.readUnsignedShort();
 
         items = new LongVector(n);
         numOfItems = 0;
-        addItem(null);          // index 0 is reserved by the JVM.
+        addItem0(null);          // index 0 is reserved by the JVM.
 
         while (--n > 0) {       // index 0 is reserved by JVM
             int tag = readOne(in);
             if ((tag == LongInfo.tag) || (tag == DoubleInfo.tag)) {
-                addItem(new ConstInfoPadding());
+                addConstInfoPadding();
                 --n;
             }
         }
+    }
 
+    private static Map<ConstInfo,ConstInfo> makeItemsCache(LongVector items)
+    {
+        Map<ConstInfo,ConstInfo> cache = new HashMap<ConstInfo,ConstInfo>();
         int i = 1;
         while (true) {
             ConstInfo info = items.elementAt(i++);
             if (info == null)
                 break;
-            else
-                info.makeHashtable(this);
+            cache.put(info, info);
         }
+
+        return cache;
     }
 
-    private int readOne(DataInputStream in) throws IOException {
+    private int readOne(DataInputStream in) throws IOException
+    {
         ConstInfo info;
         int tag = in.readUnsignedByte();
         switch (tag) {
         case Utf8Info.tag :                     // 1
             info = new Utf8Info(in, numOfItems);
-            strings.put(((Utf8Info)info).string, info);
             break;
         case IntegerInfo.tag :                  // 3
-            info = new IntegerInfo(in);
+            info = new IntegerInfo(in, numOfItems);
             break;
         case FloatInfo.tag :                    // 4
-            info = new FloatInfo(in);
+            info = new FloatInfo(in, numOfItems);
             break;
         case LongInfo.tag :                     // 5
-            info = new LongInfo(in);
+            info = new LongInfo(in, numOfItems);
             break;
         case DoubleInfo.tag :                   // 6
-            info = new DoubleInfo(in);
+            info = new DoubleInfo(in, numOfItems);
             break;
         case ClassInfo.tag :                    // 7
             info = new ClassInfo(in, numOfItems);
-            // classes.put(<classname>, info);
             break;
         case StringInfo.tag :                   // 8
-            info = new StringInfo(in);
+            info = new StringInfo(in, numOfItems);
             break;
         case FieldrefInfo.tag :                 // 9
-            info = new FieldrefInfo(in);
+            info = new FieldrefInfo(in, numOfItems);
             break;
         case MethodrefInfo.tag :                // 10
-            info = new MethodrefInfo(in);
+            info = new MethodrefInfo(in, numOfItems);
             break;
         case InterfaceMethodrefInfo.tag :       // 11
-            info = new InterfaceMethodrefInfo(in);
+            info = new InterfaceMethodrefInfo(in, numOfItems);
             break;
         case NameAndTypeInfo.tag :              // 12
-            info = new NameAndTypeInfo(in);
+            info = new NameAndTypeInfo(in, numOfItems);
+            break;
+        case MethodHandleInfo.tag :             // 15
+            info = new MethodHandleInfo(in, numOfItems);
+            break;
+        case MethodTypeInfo.tag :               // 16
+            info = new MethodTypeInfo(in, numOfItems);
+            break;
+        case InvokeDynamicInfo.tag :            // 18
+            info = new InvokeDynamicInfo(in, numOfItems);
+            break;
+        case ModuleInfo.tag :                   // 19
+            info = new ModuleInfo(in, numOfItems);
+            break;
+        case PackageInfo.tag :                  // 20
+            info = new PackageInfo(in, numOfItems);
             break;
         default :
-            throw new IOException("invalid constant type: " + tag);
+            throw new IOException("invalid constant type: " 
+                                + tag + " at " + numOfItems);
         }
 
-        addItem(info);
+        addItem0(info);
         return tag;
     }
 
     /**
      * Writes the contents of the constant pool table.
      */
-    public void write(DataOutputStream out) throws IOException {
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeShort(numOfItems);
         LongVector v = items;
         int size = numOfItems;
@@ -1108,14 +1375,16 @@ public final class ConstPool {
     /**
      * Prints the contents of the constant pool table.
      */
-    public void print() {
+    public void print()
+    {
         print(new PrintWriter(System.out, true));
     }
 
     /**
      * Prints the contents of the constant pool table.
      */
-    public void print(PrintWriter out) {
+    public void print(PrintWriter out)
+    {
         int size = numOfItems;
         for (int i = 1; i < size; ++i) {
             out.print(i);
@@ -1125,22 +1394,27 @@ public final class ConstPool {
     }
 }
 
-abstract class ConstInfo {
+abstract class ConstInfo
+{
+    int index;
+
+    public ConstInfo(int i) { index = i; }
+
     public abstract int getTag();
 
     public String getClassName(ConstPool cp) { return null; }
-    public void renameClass(ConstPool cp, String oldName, String newName) {}
-    public void renameClass(ConstPool cp, Map classnames) {}
-    public abstract int copy(ConstPool src, ConstPool dest, Map classnames);
-                        // ** classnames is a mapping between JVM names.
+    public void renameClass(ConstPool cp, String oldName, String newName,
+            Map<ConstInfo,ConstInfo> cache) {}
+    public void renameClass(ConstPool cp, Map<String,String> classnames,
+            Map<ConstInfo,ConstInfo> cache) {}
+    public abstract int copy(ConstPool src, ConstPool dest,
+            Map<String, String> classnames);
+        // ** classnames is a mapping between JVM names.
 
     public abstract void write(DataOutputStream out) throws IOException;
     public abstract void print(PrintWriter out);
 
-    void makeHashtable(ConstPool cp) {}     // called after read() finishes in ConstPool.
-
-    boolean hashCheck(int a, int b) { return false; }
-
+    @Override
     public String toString() {
         ByteArrayOutputStream bout = new ByteArrayOutputStream();
         PrintWriter out = new PrintWriter(bout);
@@ -1151,70 +1425,122 @@ abstract class ConstInfo {
 
 /* padding following DoubleInfo or LongInfo.
  */
-class ConstInfoPadding extends ConstInfo {
+class ConstInfoPadding extends ConstInfo
+{
+    public ConstInfoPadding(int i) { super(i); }
+
+    @Override
     public int getTag() { return 0; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addConstInfoPadding();
     }
 
+    @Override
     public void write(DataOutputStream out) throws IOException {}
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.println("padding");
     }
 }
 
-class ClassInfo extends ConstInfo {
+class ClassInfo extends ConstInfo
+{
     static final int tag = 7;
     int name;
-    int index;
 
-    public ClassInfo(int className, int i) {
+    public ClassInfo(int className, int index)
+    {
+        super(index);
         name = className;
-        index = i;
     }
 
-    public ClassInfo(DataInputStream in, int i) throws IOException {
+    public ClassInfo(DataInputStream in, int index) throws IOException
+    {
+        super(index);
         name = in.readUnsignedShort();
-        index = i;
     }
 
+    @Override
+    public int hashCode() { return name; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof ClassInfo && ((ClassInfo)obj).name == name;
+    }
+
+    @Override
     public int getTag() { return tag; }
 
-    public String getClassName(ConstPool cp) {
+    @Override
+    public String getClassName(ConstPool cp)
+    {
         return cp.getUtf8Info(name);
-    };
-
-    public void renameClass(ConstPool cp, String oldName, String newName) {
-        String nameStr = cp.getUtf8Info(name);
-        if (nameStr.equals(oldName))
-            name = cp.addUtf8Info(newName);
-        else if (nameStr.charAt(0) == '[') {
-            String nameStr2 = Descriptor.rename(nameStr, oldName, newName);
-            if (nameStr != nameStr2)
-                name = cp.addUtf8Info(nameStr2);
-        }
     }
 
-    public void renameClass(ConstPool cp, Map map) {
+    @Override
+    public void renameClass(ConstPool cp, String oldName, String newName,
+            Map<ConstInfo,ConstInfo> cache)
+    {
+        String nameStr = cp.getUtf8Info(name);
+        String newNameStr = null;
+        if (nameStr.equals(oldName))
+            newNameStr = newName;
+        else if (nameStr.charAt(0) == '[') {
+            String s = Descriptor.rename(nameStr, oldName, newName);
+            if (nameStr != s)
+                newNameStr = s;
+        }
+
+        if (newNameStr != null)
+            if (cache == null)
+                name = cp.addUtf8Info(newNameStr);
+            else {
+                cache.remove(this);
+                name = cp.addUtf8Info(newNameStr);
+                cache.put(this, this);
+            }
+    }
+
+    @Override
+    public void renameClass(ConstPool cp, Map<String,String> map,
+            Map<ConstInfo,ConstInfo> cache)
+    {
         String oldName = cp.getUtf8Info(name);
+        String newName = null;
         if (oldName.charAt(0) == '[') {
-            String newName = Descriptor.rename(oldName, map);
-            if (oldName != newName)
-                name = cp.addUtf8Info(newName);
+            String s = Descriptor.rename(oldName, map);
+            if (oldName != s)
+                newName = s;
         }
         else {
-            String newName = (String)map.get(oldName);
-            if (newName != null && !newName.equals(oldName))
+            String s = map.get(oldName);
+            if (s != null && !s.equals(oldName))
+                newName = s;
+        }
+
+        if (newName != null) {
+            if (cache == null)
                 name = cp.addUtf8Info(newName);
+            else {
+                cache.remove(this);
+                name = cp.addUtf8Info(newName);
+                cache.put(this, this);
+            }
         }
     }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         String classname = src.getUtf8Info(name);
         if (map != null) {
-            String newname = (String)map.get(classname);
+            String newname = map.get(classname);
             if (newname != null)
                 classname = newname;
         }
@@ -1222,56 +1548,93 @@ class ClassInfo extends ConstInfo {
         return dest.addClassInfo(classname);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeShort(name);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("Class #");
         out.println(name);
     }
-
-    void makeHashtable(ConstPool cp) {
-        String name = Descriptor.toJavaName(getClassName(cp));
-        cp.classes.put(name, this);
-    }
 }
 
-class NameAndTypeInfo extends ConstInfo {
+class NameAndTypeInfo extends ConstInfo
+{
     static final int tag = 12;
     int memberName;
     int typeDescriptor;
 
-    public NameAndTypeInfo(int name, int type) {
+    public NameAndTypeInfo(int name, int type, int index)
+    {
+        super(index);
         memberName = name;
         typeDescriptor = type;
     }
 
-    public NameAndTypeInfo(DataInputStream in) throws IOException {
+    public NameAndTypeInfo(DataInputStream in, int index) throws IOException
+    {
+        super(index);
         memberName = in.readUnsignedShort();
         typeDescriptor = in.readUnsignedShort();
     }
 
-    boolean hashCheck(int a, int b) { return a == memberName && b == typeDescriptor; }
+    @Override
+    public int hashCode() { return (memberName << 16) ^ typeDescriptor; }
 
+    @Override
+    public boolean equals(Object obj)
+    {
+        if (obj instanceof NameAndTypeInfo) {
+            NameAndTypeInfo nti = (NameAndTypeInfo)obj;
+            return nti.memberName == memberName
+                    && nti.typeDescriptor == typeDescriptor;
+        }
+        return false;
+    }
+
+    @Override
     public int getTag() { return tag; }
 
-    public void renameClass(ConstPool cp, String oldName, String newName) {
+    @Override
+    public void renameClass(ConstPool cp, String oldName, String newName,
+            Map<ConstInfo,ConstInfo> cache)
+    {
         String type = cp.getUtf8Info(typeDescriptor);
         String type2 = Descriptor.rename(type, oldName, newName);
         if (type != type2)
-            typeDescriptor = cp.addUtf8Info(type2);
+            if (cache == null)
+                typeDescriptor = cp.addUtf8Info(type2);
+            else {
+                cache.remove(this);
+                typeDescriptor = cp.addUtf8Info(type2);
+                cache.put(this, this);
+            }
     }
 
-    public void renameClass(ConstPool cp, Map map) {
+    @Override
+    public void renameClass(ConstPool cp, Map<String,String> map,
+            Map<ConstInfo,ConstInfo> cache)
+    {
         String type = cp.getUtf8Info(typeDescriptor);
         String type2 = Descriptor.rename(type, map);
         if (type != type2)
-            typeDescriptor = cp.addUtf8Info(type2);
+            if (cache == null)
+                typeDescriptor = cp.addUtf8Info(type2);
+            else {
+                cache.remove(this);
+                typeDescriptor = cp.addUtf8Info(type2);
+                cache.put(this, this);
+            }
     }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         String mname = src.getUtf8Info(memberName);
         String tdesc = src.getUtf8Info(typeDescriptor);
         tdesc = Descriptor.rename(tdesc, map);
@@ -1279,12 +1642,14 @@ class NameAndTypeInfo extends ConstInfo {
                                        dest.addUtf8Info(tdesc));
     }
 
+    @Override
     public void write(DataOutputStream out) throws IOException {
         out.writeByte(tag);
         out.writeShort(memberName);
         out.writeShort(typeDescriptor);
     }
 
+    @Override
     public void print(PrintWriter out) {
         out.print("NameAndType #");
         out.print(memberName);
@@ -1293,37 +1658,61 @@ class NameAndTypeInfo extends ConstInfo {
     }
 }
 
-abstract class MemberrefInfo extends ConstInfo {
+abstract class MemberrefInfo extends ConstInfo
+{
     int classIndex;
     int nameAndTypeIndex;
 
-    public MemberrefInfo(int cindex, int ntindex) {
+    public MemberrefInfo(int cindex, int ntindex, int thisIndex)
+    {
+        super(thisIndex);
         classIndex = cindex;
         nameAndTypeIndex = ntindex;
     }
 
-    public MemberrefInfo(DataInputStream in) throws IOException {
+    public MemberrefInfo(DataInputStream in, int thisIndex)
+            throws IOException
+    {
+        super(thisIndex);
         classIndex = in.readUnsignedShort();
         nameAndTypeIndex = in.readUnsignedShort();
     }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int hashCode() { return (classIndex << 16) ^ nameAndTypeIndex; }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (obj instanceof MemberrefInfo) {
+            MemberrefInfo mri = (MemberrefInfo)obj;
+            return mri.classIndex == classIndex
+                    && mri.nameAndTypeIndex == nameAndTypeIndex
+                    && mri.getClass() == this.getClass();
+        }
+        return false;
+    }
+
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         int classIndex2 = src.getItem(classIndex).copy(src, dest, map);
         int ntIndex2 = src.getItem(nameAndTypeIndex).copy(src, dest, map);
         return copy2(dest, classIndex2, ntIndex2);
     }
 
-    boolean hashCheck(int a, int b) { return a == classIndex && b == nameAndTypeIndex; }
-
     abstract protected int copy2(ConstPool dest, int cindex, int ntindex);
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(getTag());
         out.writeShort(classIndex);
         out.writeShort(nameAndTypeIndex);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print(getTagName() + " #");
         out.print(classIndex);
         out.print(", name&type #");
@@ -1333,240 +1722,720 @@ abstract class MemberrefInfo extends ConstInfo {
     public abstract String getTagName();
 }
 
-class FieldrefInfo extends MemberrefInfo {
+class FieldrefInfo extends MemberrefInfo
+{
     static final int tag = 9;
 
-    public FieldrefInfo(int cindex, int ntindex) {
-        super(cindex, ntindex);
+    public FieldrefInfo(int cindex, int ntindex, int thisIndex)
+    {
+        super(cindex, ntindex, thisIndex);
     }
 
-    public FieldrefInfo(DataInputStream in) throws IOException {
-        super(in);
+    public FieldrefInfo(DataInputStream in, int thisIndex)
+            throws IOException
+    {
+        super(in, thisIndex);
     }
 
+    @Override
     public int getTag() { return tag; }
 
+    @Override
     public String getTagName() { return "Field"; }
 
-    protected int copy2(ConstPool dest, int cindex, int ntindex) {
+    @Override
+    protected int copy2(ConstPool dest, int cindex, int ntindex)
+    {
         return dest.addFieldrefInfo(cindex, ntindex);
     }
 }
 
-class MethodrefInfo extends MemberrefInfo {
+class MethodrefInfo extends MemberrefInfo
+{
     static final int tag = 10;
 
-    public MethodrefInfo(int cindex, int ntindex) {
-        super(cindex, ntindex);
+    public MethodrefInfo(int cindex, int ntindex, int thisIndex)
+    {
+        super(cindex, ntindex, thisIndex);
     }
 
-    public MethodrefInfo(DataInputStream in) throws IOException {
-        super(in);
+    public MethodrefInfo(DataInputStream in, int thisIndex)
+            throws IOException
+    {
+        super(in, thisIndex);
     }
 
+    @Override
     public int getTag() { return tag; }
 
+    @Override
     public String getTagName() { return "Method"; }
 
-    protected int copy2(ConstPool dest, int cindex, int ntindex) {
+    @Override
+    protected int copy2(ConstPool dest, int cindex, int ntindex)
+    {
         return dest.addMethodrefInfo(cindex, ntindex);
     }
 }
 
-class InterfaceMethodrefInfo extends MemberrefInfo {
+class InterfaceMethodrefInfo extends MemberrefInfo
+{
     static final int tag = 11;
 
-    public InterfaceMethodrefInfo(int cindex, int ntindex) {
-        super(cindex, ntindex);
+    public InterfaceMethodrefInfo(int cindex, int ntindex, int thisIndex)
+    {
+        super(cindex, ntindex, thisIndex);
     }
 
-    public InterfaceMethodrefInfo(DataInputStream in) throws IOException {
-        super(in);
+    public InterfaceMethodrefInfo(DataInputStream in, int thisIndex)
+            throws IOException
+    {
+        super(in, thisIndex);
     }
 
+    @Override
     public int getTag() { return tag; }
 
+    @Override
     public String getTagName() { return "Interface"; }
 
-    protected int copy2(ConstPool dest, int cindex, int ntindex) {
+    @Override
+    protected int copy2(ConstPool dest, int cindex, int ntindex)
+    {
         return dest.addInterfaceMethodrefInfo(cindex, ntindex);
     }
 }
 
-class StringInfo extends ConstInfo {
+class StringInfo extends ConstInfo
+{
     static final int tag = 8;
     int string;
 
-    public StringInfo(int str) {
+    public StringInfo(int str, int index)
+    {
+        super(index);
         string = str;
     }
 
-    public StringInfo(DataInputStream in) throws IOException {
+    public StringInfo(DataInputStream in, int index) throws IOException
+    {
+        super(index);
         string = in.readUnsignedShort();
     }
 
+    @Override
+    public int hashCode() { return string; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof StringInfo && ((StringInfo)obj).string == string;
+    }
+
+    @Override
     public int getTag() { return tag; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addStringInfo(src.getUtf8Info(string));
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeShort(string);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("String #");
         out.println(string);
     }
 }
 
-class IntegerInfo extends ConstInfo {
+class IntegerInfo extends ConstInfo
+{
     static final int tag = 3;
     int value;
 
-    public IntegerInfo(int i) {
-        value = i;
+    public IntegerInfo(int v, int index)
+    {
+        super(index);
+        value = v;
     }
 
-    public IntegerInfo(DataInputStream in) throws IOException {
+    public IntegerInfo(DataInputStream in, int index) throws IOException
+    {
+        super(index);
         value = in.readInt();
     }
 
+    @Override
+    public int hashCode() { return value; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof IntegerInfo && ((IntegerInfo)obj).value == value;
+    }
+
+    @Override
     public int getTag() { return tag; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addIntegerInfo(value);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeInt(value);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("Integer ");
         out.println(value);
     }
 }
 
-class FloatInfo extends ConstInfo {
+class FloatInfo extends ConstInfo
+{
     static final int tag = 4;
     float value;
 
-    public FloatInfo(float f) {
+    public FloatInfo(float f, int index)
+    {
+        super(index);
         value = f;
     }
 
-    public FloatInfo(DataInputStream in) throws IOException {
+    public FloatInfo(DataInputStream in, int index) throws IOException
+    {
+        super(index);
         value = in.readFloat();
     }
 
+    @Override
+    public int hashCode() { return Float.floatToIntBits(value); }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof FloatInfo && ((FloatInfo)obj).value == value;
+    }
+
+    @Override
     public int getTag() { return tag; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addFloatInfo(value);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeFloat(value);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("Float ");
         out.println(value);
     }
 }
 
-class LongInfo extends ConstInfo {
+class LongInfo extends ConstInfo
+{
     static final int tag = 5;
     long value;
 
-    public LongInfo(long l) {
+    public LongInfo(long l, int index)
+    {
+        super(index);
         value = l;
     }
 
-    public LongInfo(DataInputStream in) throws IOException {
+    public LongInfo(DataInputStream in, int index) throws IOException
+    {
+        super(index);
         value = in.readLong();
     }
 
+    @Override
+    public int hashCode() { return (int)(value ^ (value >>> 32)); }
+
+    @Override
+    public boolean equals(Object obj) {
+        return obj instanceof LongInfo && ((LongInfo)obj).value == value;
+    }
+
+    @Override
     public int getTag() { return tag; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addLongInfo(value);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeLong(value);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("Long ");
         out.println(value);
     }
 }
 
-class DoubleInfo extends ConstInfo {
+class DoubleInfo extends ConstInfo
+{
     static final int tag = 6;
     double value;
 
-    public DoubleInfo(double d) {
+    public DoubleInfo(double d, int index)
+    {
+        super(index);
         value = d;
     }
 
-    public DoubleInfo(DataInputStream in) throws IOException {
+    public DoubleInfo(DataInputStream in, int index) throws IOException
+    {
+        super(index);
         value = in.readDouble();
     }
 
+    @Override
+    public int hashCode() {
+        long v = Double.doubleToLongBits(value);
+        return (int)(v ^ (v >>> 32));
+    }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof DoubleInfo
+                && ((DoubleInfo)obj).value == value;
+    }
+
+    @Override
     public int getTag() { return tag; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addDoubleInfo(value);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeDouble(value);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("Double ");
         out.println(value);
     }
 }
 
-class Utf8Info extends ConstInfo {
+class Utf8Info extends ConstInfo
+{
     static final int tag = 1;
     String string;
-    int index;
 
-    public Utf8Info(String utf8, int i) {
+    public Utf8Info(String utf8, int index)
+    {
+        super(index);
         string = utf8;
-        index = i;
     }
 
-    public Utf8Info(DataInputStream in, int i) throws IOException {
+    public Utf8Info(DataInputStream in, int index)
+            throws IOException
+    {
+        super(index);
         string = in.readUTF();
-        index = i;
     }
 
+    @Override
+    public int hashCode() {
+        return string.hashCode();
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        return obj instanceof Utf8Info
+                && ((Utf8Info)obj).string.equals(string);
+    }
+
+    @Override
     public int getTag() { return tag; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest,
+            Map<String,String> map)
+    {
         return dest.addUtf8Info(string);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out)
+            throws IOException
+    {
         out.writeByte(tag);
         out.writeUTF(string);
     }
 
+    @Override
     public void print(PrintWriter out) {
         out.print("UTF8 \"");
         out.print(string);
         out.println("\"");
+    }
+}
+
+class MethodHandleInfo extends ConstInfo {
+    static final int tag = 15;
+    int refKind, refIndex;
+
+    public MethodHandleInfo(int kind, int referenceIndex, int index) {
+        super(index);
+        refKind = kind;
+        refIndex = referenceIndex;
+    }
+
+    public MethodHandleInfo(DataInputStream in, int index)
+            throws IOException
+    {
+        super(index);
+        refKind = in.readUnsignedByte();
+        refIndex = in.readUnsignedShort();
+    }
+
+    @Override
+    public int hashCode() { return (refKind << 16) ^ refIndex; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        if (obj instanceof MethodHandleInfo) {
+            MethodHandleInfo mh = (MethodHandleInfo)obj;
+            return mh.refKind == refKind && mh.refIndex == refIndex;
+        }
+        return false;
+    }
+
+    @Override
+    public int getTag() { return tag; }
+
+    @Override
+    public int copy(ConstPool src, ConstPool dest,
+            Map<String,String> map)
+    {
+       return dest.addMethodHandleInfo(refKind,
+                   src.getItem(refIndex).copy(src, dest, map));
+    }
+
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
+        out.writeByte(tag);
+        out.writeByte(refKind);
+        out.writeShort(refIndex);
+    }
+
+    @Override
+    public void print(PrintWriter out) {
+        out.print("MethodHandle #");
+        out.print(refKind);
+        out.print(", index #");
+        out.println(refIndex);
+    }
+}
+
+class MethodTypeInfo extends ConstInfo
+{
+    static final int tag = 16;
+    int descriptor;
+
+    public MethodTypeInfo(int desc, int index)
+    {
+        super(index);
+        descriptor = desc;
+    }
+
+    public MethodTypeInfo(DataInputStream in, int index)
+            throws IOException
+    {
+        super(index);
+        descriptor = in.readUnsignedShort();
+    }
+
+    @Override
+    public int hashCode() { return descriptor; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        if (obj instanceof MethodTypeInfo)
+            return ((MethodTypeInfo)obj).descriptor == descriptor;
+        return false;
+    }
+
+    @Override
+    public int getTag() { return tag; }
+
+    @Override
+    public void renameClass(ConstPool cp, String oldName, String newName,
+            Map<ConstInfo,ConstInfo> cache)
+    {
+        String desc = cp.getUtf8Info(descriptor);
+        String desc2 = Descriptor.rename(desc, oldName, newName);
+        if (desc != desc2)
+            if (cache == null)
+                descriptor = cp.addUtf8Info(desc2);
+            else {
+                cache.remove(this);
+                descriptor = cp.addUtf8Info(desc2);
+                cache.put(this, this);
+            }
+    }
+
+    @Override
+    public void renameClass(ConstPool cp, Map<String,String> map,
+            Map<ConstInfo,ConstInfo> cache)
+    {
+        String desc = cp.getUtf8Info(descriptor);
+        String desc2 = Descriptor.rename(desc, map);
+        if (desc != desc2)
+            if (cache == null)
+                descriptor = cp.addUtf8Info(desc2);
+            else {
+                cache.remove(this);
+                descriptor = cp.addUtf8Info(desc2);
+                cache.put(this, this);
+            }
+    }
+
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
+        String desc = src.getUtf8Info(descriptor);
+        desc = Descriptor.rename(desc, map);
+        return dest.addMethodTypeInfo(dest.addUtf8Info(desc));
+    }
+
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
+        out.writeByte(tag);
+        out.writeShort(descriptor);
+    }
+
+    @Override
+    public void print(PrintWriter out) {
+        out.print("MethodType #");
+        out.println(descriptor);
+    }
+}
+
+class InvokeDynamicInfo extends ConstInfo
+{
+    static final int tag = 18;
+    int bootstrap, nameAndType;
+
+    public InvokeDynamicInfo(int bootstrapMethod,
+            int ntIndex, int index)
+    {
+        super(index);
+        bootstrap = bootstrapMethod;
+        nameAndType = ntIndex;
+    }
+
+    public InvokeDynamicInfo(DataInputStream in, int index)
+            throws IOException
+    {
+        super(index);
+        bootstrap = in.readUnsignedShort();
+        nameAndType = in.readUnsignedShort();
+    }
+
+    @Override
+    public int hashCode() { return (bootstrap << 16) ^ nameAndType; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        if (obj instanceof InvokeDynamicInfo) {
+            InvokeDynamicInfo iv = (InvokeDynamicInfo)obj;
+            return iv.bootstrap == bootstrap
+                    && iv.nameAndType == nameAndType;
+        }
+        return false;
+    }
+
+    @Override
+    public int getTag() { return tag; }
+
+    @Override
+    public int copy(ConstPool src, ConstPool dest,
+            Map<String,String> map)
+    {
+       return dest.addInvokeDynamicInfo(bootstrap,
+            src.getItem(nameAndType).copy(src, dest, map));
+    }
+
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
+        out.writeByte(tag);
+        out.writeShort(bootstrap);
+        out.writeShort(nameAndType);
+    }
+
+    @Override
+    public void print(PrintWriter out) {
+        out.print("InvokeDynamic #");
+        out.print(bootstrap);
+        out.print(", name&type #");
+        out.println(nameAndType);
+    }
+}
+
+class ModuleInfo extends ConstInfo
+{
+    static final int tag = 19;
+    int name;
+
+    public ModuleInfo(int moduleName, int index)
+    {
+        super(index);
+        name = moduleName;
+    }
+
+    public ModuleInfo(DataInputStream in, int index)
+            throws IOException
+    {
+        super(index);
+        name = in.readUnsignedShort();
+    }
+
+    @Override
+    public int hashCode() { return name; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof ModuleInfo
+                && ((ModuleInfo)obj).name == name;
+    }
+
+    @Override
+    public int getTag() { return tag; }
+
+    public String getModuleName(ConstPool cp)
+    {
+        return cp.getUtf8Info(name);
+    }
+
+    @Override
+    public int copy(ConstPool src, ConstPool dest,
+            Map<String,String> map)
+    {
+        String moduleName = src.getUtf8Info(name);
+        int newName = dest.addUtf8Info(moduleName);
+        return dest.addModuleInfo(newName);
+    }
+
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
+        out.writeByte(tag);
+        out.writeShort(name);
+    }
+
+    @Override
+    public void print(PrintWriter out) {
+        out.print("Module #");
+        out.println(name);
+    }
+}
+
+class PackageInfo extends ConstInfo
+{
+    static final int tag = 20;
+    int name;
+
+    public PackageInfo(int moduleName, int index)
+    {
+        super(index);
+        name = moduleName;
+    }
+
+    public PackageInfo(DataInputStream in, int index)
+            throws IOException
+    {
+        super(index);
+        name = in.readUnsignedShort();
+    }
+
+    @Override
+    public int hashCode() { return name; }
+
+    @Override
+    public boolean equals(Object obj) {
+        return obj instanceof PackageInfo
+                && ((PackageInfo)obj).name == name;
+    }
+
+    @Override
+    public int getTag() { return tag; }
+
+    public String getPackageName(ConstPool cp)
+    {
+        return cp.getUtf8Info(name);
+    }
+
+    @Override
+    public int copy(ConstPool src, ConstPool dest,
+            Map<String,String> map)
+    {
+        String packageName = src.getUtf8Info(name);
+        int newName = dest.addUtf8Info(packageName);
+        return dest.addModuleInfo(newName);
+    }
+
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
+        out.writeByte(tag);
+        out.writeShort(name);
+    }
+
+    @Override
+    public void print(PrintWriter out)
+    {
+        out.print("Package #");
+        out.println(name);
     }
 }
